--- a/index.html
+++ b/index.html
@@ -268,13 +268,13 @@
             <div class="inside-text">
                 <h3 class="happy">HAPPY</h3>
                 <h2 class="bday">BIRTHDAY</h2>
-                <h3 class="toyou">to you Faizaan!</h3>
+                <h3 class="toyou">to you!</h3>
                 
             </div>
             <div class="wishes">
                 <p>Dear Friend,</p>
-                <p>Happy Birthday Faizaan!!! I Hope your day is filled with lots of love and laughter! May all of your birthday wishes come true.</p>
-                <p class="name">From Faisal</p>
+                <p>Happy Birthday!!! I Hope your day is filled with lots of love and laughter! May all of your birthday wishes come true.</p>
+                <p class="name">Name</p>
             </div>
         </div>
     </div>
