--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
                 <p>Dear Friend,</p>
                 <p>Happy Birthday!!! I Hope your day is filled with lots of love and laughter! May all of your birthday wishes come true.</p>
                 <p class="name">Name</p>
+                <a href='CSS_PANDA.html'>Panda</a>
             </div>
         </div>
     </div>
